updates to 09_starchaserwq

--- a/09_starchaser/app/templates/_navigation.html
+++ b/09_starchaser/app/templates/_navigation.html
@@ -1,7 +1,54 @@
 {# templates/_navigation.html #}
 
-<nav>
-{% for menu_item in ["home", "results", "database"] %}
-    {{ macros.nav_link(menu_item) }}
-{% endfor %}
+
+
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="container">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="{%  url 'star_chaser_welcome' %}">StarChaser</a>
+        </div>
+        <ul class='nav navbar-nav navbar-right'>
+            {% if user.is_authenticated %}
+            <li class="nav-item">
+                <a href="{% url 'player_logout' %}">Logout</a>
+            </li>
+            {% else %}
+            <li class="nav-item">
+                <a href="{% url 'signup' %}">Create Account</a>
+            </li>
+            <li class="nav-item">
+                <a href="{% url 'player_login' %}">Log In</a>
+            </li>
+            {% endif %}
+
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                    data-toggle="dropdown">Why...</a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="{% url 'ref01_why_game' %}" target="_blank">Why Make a Game?</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="{% url 'ref05_this_web_application' %}" target="_blank">The
+                        Design</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="{% url 'ref08_plasticc_and_kaggle' %}" target="_blank">PLAsTiCC
+                        and the Kaggle Dataset...</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="{% url 'ref04_variety_of_approaches' %}" target="_blank">Variety
+                        of Approaches...</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="{% url 'ref06_building_a_model' %}" target="_blank">To Build a
+                        Model...</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="{% url 'ref09_metrics' %}" target="_blank">Metrics and Why
+                        They're Important</a>
+                    <div class="dropdown-divider"></div>
+            </li>
+
+
+    </div>
+    </li>
+
+
+    </ul>
+    </div>
 </nav>
